2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Remember the level of the last
	  backup and use it to find the corresponding statefile.

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: Use $CC

2015-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski
	* man/xml-source/tapelist.5.xml: Fix duplicate word

2015-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_main_util.c: Always quote log message.

2015-09-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Fix if the device can't be opened

2015-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Fix CFLAGS for compiling amcrc32c.c

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Fix for 32 bits

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Qulify crc32vc_add_hw argument as
	  G_GNUC_UNUSED
	* common-src/util.c: Define get_sse42 only if we use it
	* common-src/crc32-test.c: Fix if not in 64 bits mode

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Fix compiler warning
	* config/amanda/flags.m4: Fix egrep expresion for solaris

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Fix asm code on i386

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Use better asm code to detect sse4.2

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (have_sse42): Do not declare static
	* common-src/util.h (have_sse42): Add extern declaration
	* common-src/crc32-test.c: Do not run hardware crc32 test if the cpu
	  do not have sse4.2

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (noinst_HEADERS): Add amcrc32chw.h

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: New file to compute crc32c with sse4.2